# lore-bot

./: Cargo.toml
src/: main.rs
