[package]
name = "lore-bot"
version = "0.1.0"
authors = ["aubrey"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tantivy = "0.9.1"
tempdir = "0.3.7"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
serenity = "0.6"
postgres = { version = "0.15.2", feature = ["with-uuid"] }
uuid = { version = "0.7", feature = ["serde", "v4"] }